fix table alignment css

--- a/src/App.css
+++ b/src/App.css
@@ -18,9 +18,9 @@
 
 h1 {
   font-size: 3rem;
-  font-weight:700;
-  margin:30px;
-  font-style:italic;
+  font-weight: 700;
+  margin: 30px;
+  font-style: italic;
   color:  #0c3805;
 }
 h2 {
@@ -31,27 +31,27 @@ h2 {
 }
 h3 {
   font-size: 0.85rem;
-  font-weight:500;
-  text-align:left;
+  font-weight: 500;
+  text-align: left;
   color:gray;
   margin-bottom: 15px;
 }
 h4 {
   font-size: 1.1rem;
-  font-weight:500;
+  font-weight: 500;
   text-align:center;
 }
 p {
   font-size: 1rem;
-  font-weight:300;
+  font-weight: 300;
   text-align: left;
 }
 td {
-  text-align:left;
+  text-align: left;
+  overflow: hidden;
 }
-
-.App-link {
-  color: #61dafb;
+.movieTitle {
+  width: 90%;
 }
 
 @keyframes App-logo-spin {
